[package]
name = "cargo-cleanall"
version = "0.1.0"
edition = "2021"
authors = ["LeSnake <dev.lesnake@posteo.de>"]
description = "Cargo plugin to clean all cargo projects in a directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["wrap_help", "cargo"] }
flexi_logger = "0.24"
human_bytes = "0.3"
log = "0.4"
miette = { version = "5.3", features = ["fancy"] }
path-absolutize = "3.0"
thiserror = "1.0"
tokio = { version = "1.21", features = ["tokio-macros", "rt", "macros", "rt-multi-thread"] }
unwrap_or = "1.0"
walkdir = "2.3"
