[package]
name = "cargo-cleanall"
version = "0.1.3"
edition = "2021"
authors = ["LeSnake <dev.lesnake@posteo.de>"]
description = "Cargo plugin to clean all cargo projects in a directory"
license = "AGPL-3.0"
repository = "https://github.com/LeSnake04/cargo-cleanall"
categories = ["development-tools::cargo-plugins", "command-line-utilities", "development-tools"]
keywords = ["tool", "cli", "cargo"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["wrap_help", "cargo"] }
flexi_logger = "0.24"
human_bytes = "0.4"
log = "0.4"
miette = { version = "5.5", features = ["fancy"] }
path-absolutize = "3.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["tokio-macros", "rt", "macros", "rt-multi-thread"] }
unwrap_or = "1.0"
walkdir = "2.3"
